--- a/style.css
+++ b/style.css
@@ -82,3 +82,47 @@ ul {
 	justify-content: space-around;
 	flex: 1 1 20rem;
 }
+
+.hero {
+	min-height: 90vh;
+	background-color: black;
+}
+
+.video-wrapper {
+	width: 100%;
+	height: 90vh;
+}
+
+video {
+	object-fit: cover;
+}
+
+.video-container {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-attachment: scroll;
+	overflow: hidden;
+}
+.video-container video {
+	min-width: 100%;
+	min-height: 100%;
+	position: relative;
+	z-index: 1;
+}
+.video-container .overlay {
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 2;
+	background: black;
+	opacity: 0.2;
+}
+
+.welcome {
+	background-color: black;
+	color: white;
+	height: 100vh;
+}
