finished the gallery section and the footer section

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* Global Styles */
+@font-face {
+    font-family: myFirstFont;
+    src: url(./fonts/Huxley\ Vertical\ Regular.otf);
+}
 
 * {
 	margin: 0;
@@ -12,7 +16,11 @@ html {
 	--header2: 1.5rem;
 	--header3: 1.2rem;
 	--header4: 1rem;
-	--text: 2rem;
+	--text: 4rem;
+}
+
+body {
+    font-family: myFirstFont, sans-serif;
 }
 
 h1 {
@@ -124,7 +132,7 @@ video {
 .welcome {
 	background-color: white;
 	color: black;
-	height: 95vh;
+	height: 100vh;
 	text-align: center;
 	display: flex;
 	justify-content: center;
@@ -133,13 +141,65 @@ video {
 
 .welcome-text {
 	display: flex;
-    flex-direction: column;
+	flex-direction: column;
 }
 
 .welcome-text h1 {
-	font-size: 5rem;
+	font-size: 8rem;
+	margin-bottom: 2rem;
 }
 
 .welcome-text p {
-	font-size: 3rem;
+	font-size: 5rem;
+}
+
+.gallery {
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+}
+
+.gallery img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+footer {
+	height: 10vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: black;
+	color: white;
+}
+
+footer h1 {
+    font-size: 4rem;
+}
+
+@media screen and (max-width: 1200px) {
+    .logo img {
+        width: 70%;
+    }
+
+    .welcome-text {
+        padding: 2rem;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    html {
+        font-size: 55%;
+    }
+
+    .logo img {
+        width: 80%;
+    }
+
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
 }
