--- a/style.css
+++ b/style.css
@@ -193,6 +193,14 @@ footer h1 {
         font-size: 55%;
     }
 
+    .welcome h1 {
+        font-size: 6rem;
+    }
+
+    .welcome p {
+        font-size: 4rem;
+    }
+
     .logo img {
         width: 80%;
     }
